# docopt.rs

./: Cargo.toml  README.md
examples/: cargo.rs  cp.rs  decode.rs  hashmap.rs  optional_command.rs  verbose_multiple.rs
sgx/sgx-test/enclave/: Cargo.toml
sgx/sgx-test/enclave/src/: lib.rs  sgx_docopt.rs  suggestions.rs  testcases.rs
src/: dopt.rs  lib.rs  parse.rs  synonym.rs  wordlist.rs
src/test/: mod.rs
