[package]
name = "docopt"
version = "1.1.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Command line argument parsing."
documentation = "http://burntsushi.net/rustdoc/docopt/"
homepage = "https://github.com/docopt/docopt.rs"
repository = "https://github.com/docopt/docopt.rs"
readme = "README.md"
keywords = ["docopt", "argument", "command", "argv"]
categories = ["command-line-interface"]
license = "Unlicense/MIT"
exclude = ["/.travis.yml", "/Makefile", "/ctags.rust", "/scripts/*", "/session.vim","/sgx/"]
edition = "2018"

[lib]
name = "docopt"

#[[bin]]
#name = "docopt-wordlist"
#path = "src/wordlist.rs"
#doc = false
#test = false

[dependencies]
lazy_static  = { version = "1.4.0", features = ["spin_no_std"] }
regex        = { git = "https://github.com/mesalock-linux/regex-sgx" }
serde  = { git = "https://github.com/mesalock-linux/serde-sgx",features = ["derive"] }

strsim = {git = "https://github.com/GeminiCarrie/strsim-rs.git",tag="v0.9.2_sgx"}
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git",optional = true}

[features]
default=["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]